# stdnum

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  README_DEV.md  dune-project  stdnum.opam
.github/workflows/: ci.yml  docs.yml
lib/: bic.ml  bic.mli  bitcoin.ml  bitcoin.mli  casrn.ml  casrn.mli  cfi.ml  cfi.mli  cusip.ml  cusip.mli  dune  ean.ml  ean.mli  figi.ml  figi.mli  grid.ml  grid.mli  iban.ml  iban.mli  iso11649.ml  iso11649.mli  iso6346.ml  iso6346.mli  stdnum.mli  vat.ml  vat.mli
lib/ad/: dune  nrt.ml  nrt.mli
lib/al/: dune  nipt.ml  nipt.mli
lib/ar/: cbu.ml  cbu.mli  dune
lib/be/: banks.txt  bis.ml  bis.mli  dune  eid.ml  eid.mli  iban.ml  iban.mli  nn.ml  nn.mli  ssn.ml  ssn.mli  vat.ml  vat.mli
lib/by/: dune  unp.ml
lib/ca/: bn.ml  dune  sin.ml
lib/ch/: dune  esr.ml  esr.mli  ssn.ml  ssn.mli  uid.ml  uid.mli  vat.ml  vat.mli
lib/cl/: dune  rut.ml
lib/cn/: dune  ric.ml  uscc.ml  uscc.mli
lib/co/: dune  nit.ml  nit.mli
lib/cr/: cpf.ml  cpf.mli  dune
lib/cz/: bank_account.ml  bank_account.mli  dic.ml  dic.mli  dune  rc.ml  rc.mli
lib/de/: dune  handelsregisternummer.ml  handelsregisternummer.mli  idnr.ml  idnr.mli  stnr.ml  stnr.mli  vat.ml  vat.mli  wkn.ml  wkn.mli
lib/do/: cedula.ml  cedula.mli  dune  ncf.ml  ncf.mli  rnc.ml  rnc.mli
lib/es/: cae.ml  cae.mli  ccc.ml  ccc.mli  cif.ml  cif.mli  cups.ml  cups.mli  dni.ml  dni.mli  dune  iban.ml  iban.mli  nie.ml  nie.mli  nif.ml  nif.mli  postal_code.ml  postal_code.mli  referenciacatastral.ml  referenciacatastral.mli
lib/fr/: dune  nif.ml  nif.mli  nir.ml  nir.mli  siren.ml  siren.mli  siret.ml  siret.mli  tva.ml  tva.mli
lib/hu/: anum.ml  anum.mli  dune
lib/iso7064/: dune  mod_11_10.ml  mod_11_10.mli  mod_11_2.ml  mod_11_2.mli  mod_37_2.ml  mod_37_2.mli  mod_37_36.ml  mod_37_36.mli  mod_97_10.ml  mod_97_10.mli
lib/it/: aic.ml  aic.mli  codicefiscale.ml  codicefiscale.mli  dune  iva.ml  iva.mli
lib/jp/: cn.ml  cn.mli  dune  in_.ml  in_.mli
lib/nl/: brin.ml  brin.mli  bsn.ml  bsn.mli  btw.ml  btw.mli  dune  identiteitskaartnummer.ml  identiteitskaartnummer.mli  onderwijsnummer.ml  onderwijsnummer.mli  postcode.ml  postcode.mli
lib/no/: dune  fodselsnummer.ml  fodselsnummer.mli  iban.ml  iban.mli  kontonr.ml  kontonr.mli  mva.ml  mva.mli  orgnr.ml  orgnr.mli
lib/pl/: dune  nip.ml  nip.mli  pesel.ml  pesel.mli  regon.ml  regon.mli
lib/ro/: cf.ml  cf.mli  cnp.ml  cnp.mli  cui.ml  cui.mli  dune  onrc.ml  onrc.mli
lib/ru/: dune  inn.ml
lib/se/: dune  orgnr.ml  orgnr.mli  personnummer.ml  personnummer.mli  postnummer.ml  postnummer.mli  vat.ml  vat.mli
lib/sg/: dune  uen.ml  uen.mli
lib/si/: ddv.ml  dune  emso.ml  emso.mli  maticna.ml  maticna.mli
lib/sk/: dph.ml  dph.mli  dune
lib/sm/: coe.ml  coe.mli  dune
lib/sv/: dune  nit.ml  nit.mli
lib/th/: dune  moa.ml  moa.mli  pin.ml  pin.mli  tin.ml  tin.mli
lib/tn/: dune  mf.ml  mf.mli
lib/tools/: damm.ml  damm.mli  dune  luhn.ml  luhn.mli  utils.ml  utils.mli  verhoeff.ml  verhoeff.mli
lib/tr/: dune  tckimlik.ml  tckimlik.mli  vkn.ml  vkn.mli
lib/tw/: dune  ubn.ml  ubn.mli
lib/ua/: dune  edrpou.ml  edrpou.mli  rntrc.ml  rntrc.mli
lib/us/: atin.ml  atin.mli  dune  ein.ml  ein.mli  itin.ml  itin.mli  ptin.ml  ptin.mli  rtn.ml  rtn.mli  ssn.ml  ssn.mli  tin.ml  tin.mli
lib/uy/: dune  rut.ml
lib/ve/: dune  rif.ml  rif.mli
lib/vn/: dune  mst.ml  mst.mli
lib/za/: dune  idnr.ml  idnr.mli  tin.ml  tin.mli
test/: dune  test_bic.ml  test_bitcoin.ml  test_casrn.ml  test_cfi.ml  test_cusip.ml  test_ean.ml  test_figi.ml  test_grid.ml  test_iban.ml  test_iso11649.ml  test_iso6346.ml
test/ad/: dune  test_nrt.ml
test/al/: dune  test_nipt.ml
test/ar/: dune  test_cbu.ml
test/be/: dune  test_bis.ml  test_eid.ml  test_iban.ml  test_nn.ml  test_ssn.ml  test_vat.ml
test/by/: dune  test_unp.ml
test/ca/: dune  test_bn.ml  test_sin.ml
test/ch/: dune  test_esr.ml  test_ssn.ml  test_uid.ml  test_vat.ml
test/cl/: dune  test_rut.ml
test/cn/: dune  test_ric.ml  test_uscc.ml
test/co/: dune  test_nit.ml
test/cr/: dune  test_cpf.ml
test/cz/: dune  test_bank_account.ml  test_dic.ml  test_rc.ml
test/de/: dune  test_handelsregisternummer.ml  test_idnr.ml  test_stnr.ml  test_vat.ml  test_wkn.ml
test/do/: dune  test_cedula.ml  test_ncf.ml  test_rnc.ml
test/es/: dune  test_cae.ml  test_ccc.ml  test_cif.ml  test_cups.ml  test_dni.ml  test_iban.ml  test_nie.ml  test_nif.ml  test_postal_code.ml  test_referenciacatastral.ml
test/fr/: dune  test_nif.ml  test_nir.ml  test_siren.ml  test_siret.ml  test_tva.ml
test/hu/: dune  test_anum.ml
test/iso7064/: dune  test_mod_11_10.ml  test_mod_11_2.ml  test_mod_37_2.ml  test_mod_37_36.ml  test_mod_97_10.ml
test/it/: dune  test_aic.ml  test_codicefiscale.ml
test/jp/: dune  test_cn.ml  test_in.ml
test/nl/: dune  test_brin.ml  test_bsn.ml  test_btw.ml  test_identiteitskaartnummer.ml  test_onderwijsnummer.ml  test_postcode.ml
test/no/: dune  test_fodselsnummer.ml  test_iban.ml  test_kontonr.ml  test_mva.ml  test_orgnr.ml
test/pl/: dune  test_nip.ml  test_pesel.ml  test_regon.ml
test/ro/: dune  test_cf.ml  test_cnp.ml  test_cui.ml  test_onrc.ml
test/ru/: dune  test_inn.ml
test/se/: dune  test_orgnr.ml  test_personnummer.ml  test_postnummer.ml  test_vat.ml
test/sg/: dune  test_uen.ml
test/si/: dune  test_ddv.ml  test_emso.ml  test_maticna.ml
test/sk/: dune  test_dph.ml
test/sm/: dune  test_coe.ml
test/sv/: dune  test_nit.ml
test/th/: dune  test_moa.ml  test_pin.ml  test_tin.ml
test/tn/: dune  test_mf.ml
test/tools/: dune  test_damm.ml  test_luhn.ml  test_utils.ml  test_verhoeff.ml
test/tr/: dune  test_tckimlik.ml  test_vkn.ml
test/tw/: dune  test_ubn.ml
test/ua/: dune  test_edrpou.ml  test_rntrc.ml
test/us/: dune  test_atin.ml  test_rtn.ml  test_tin.ml
test/uy/: dune  test_rut.ml
test/ve/: dune  test_rif.ml
test/vn/: dune  test_mst.ml
test/za/: dune  test_idnr.ml  test_tin.ml
