(test
 (name test_bic)
 (libraries alcotest stdnum)
 (modules test_bic))

(test
 (name test_bitcoin)
 (libraries alcotest stdnum)
 (modules test_bitcoin))

(test
 (name test_casrn)
 (libraries alcotest stdnum)
 (modules test_casrn))

(test
 (name test_cfi)
 (libraries alcotest stdnum)
 (modules test_cfi))

(test
 (name test_cusip)
 (libraries alcotest stdnum)
 (modules test_cusip))

(test
 (name test_ean)
 (libraries alcotest stdnum)
 (modules test_ean))

(test
 (name test_figi)
 (libraries alcotest stdnum)
 (modules test_figi))

(test
 (name test_grid)
 (libraries alcotest stdnum)
 (modules test_grid))
