(test
 (name test_esr)
 (libraries alcotest ch_stdnum)
 (modules test_esr))

(test
 (name test_ssn)
 (libraries alcotest ch_stdnum)
 (modules test_ssn))

(test
 (name test_uid)
 (libraries alcotest ch_stdnum)
 (modules test_uid))

(test
 (name test_vat)
 (libraries alcotest ch_stdnum)
 (modules test_vat))
