(test
 (name test_siren)
 (libraries alcotest stdnum)
 (modules test_siren))

(test
 (name test_tva)
 (libraries alcotest stdnum)
 (modules test_tva))

(test
 (name test_siret)
 (libraries alcotest stdnum)
 (modules test_siret))

(test
 (name test_nir)
 (libraries alcotest stdnum)
 (modules test_nir))
