(test
 (name test_brin)
 (libraries alcotest nl)
 (modules test_brin))

(test
 (name test_bsn)
 (libraries alcotest nl)
 (modules test_bsn))

(test
 (name test_btw)
 (libraries alcotest nl)
 (modules test_btw))

(test
 (name test_identiteitskaartnummer)
 (libraries alcotest nl)
 (modules test_identiteitskaartnummer))

(test
 (name test_onderwijsnummer)
 (libraries alcotest nl)
 (modules test_onderwijsnummer))

(test
 (name test_postcode)
 (libraries alcotest nl)
 (modules test_postcode))
